# species8-plugin

./: .gitignore  .mcp.json  ARCHITECTURE.md  CMakeLists.txt  PROJECT_SUMMARY.txt  PROMPTS.md  QUICKSTART.md  README.md  build.sh  install.sh
Source/: BinauralSpatializer.h  DragDropComponent.cpp  DragDropComponent.h  GlassmorphicLookAndFeel.cpp  GlassmorphicLookAndFeel.h  MascotComponent.cpp  MascotComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RendererMain.cpp  StereoWidthProcessor.cpp  StereoWidthProcessor.h  WaveformDisplay.cpp  WaveformDisplay.h
server/: eslint.config.mjs  mcp.js  package-lock.json  package.json
server/src/: dspBridge.js  dspBridge.merge.test.js  effectLibrary.js  index.js  promptBrain.js  pythonEffects.js
server/src/effects/: cellular_automata.py  euclidean_stutter.py  fractal_noise.py  granular_cloud.py  merge_analysis.py  merge_physics.py  paulstretch.py  polyrhythm_gate.py  spectral_freeze.py
server/tools/: get_status.js  list_mutations.js  mutate.js  upload_audio.js
web-ui/: eslint.config.mjs  package-lock.json  package.json
web-ui/app/: error.tsx  globals.css  layout.tsx  page.tsx
web-ui/components/: alien-visualizer.tsx  prompt-studio.tsx  pulsing-circle.tsx  rich-text-editor.tsx  shader-background.tsx
